added formatting and swagger autogen
