# routes/index.js
@@ -46,8 +46,12 @@ router.use(
   ensureAuth,
   require('./swagger')
 );
+router.use(
+  // #swagger.ignore = true
+  '/register',
+  require('./register')
+);
 
-router.use('/register', require('./register'));
 router.use('/audio', ensureAuth, require('./audio'));
 router.use('/video', ensureAuth, require('./video'));
 router.use('/document', ensureAuth, require('./document'));
